[package]
name = "asciimusic"
description = "Simple and fun, but largely useless, program and library for processing a compressed and encoded text string to audio output"
license = "MIT"
readme = "README.md"
version = "0.1.3"
authors = ["Taylor C. Richberger <taywee@gmx.com>"]
edition = "2018"
documentation = "https://docs.rs/asciimusic"
homepage = "https://gitlab.com/Taywee/asciimusic"
repository = "https://gitlab.com/Taywee/asciimusic"
keywords = ["music", "audio"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = '1'
toml = '0.5'
brotli = '3'
base64 = '0.12'
bincode = '1'

[dependencies.rand]
version = '0.7'
features = ['small_rng']

[dependencies.serde]
version = '1'
features = ['derive']
