[package]
name = "imagemusic"
description = "Simple and fun, but largely useless, program and library for processing a compressed and encoded payload in an image into audio output"
license = "MIT"
readme = "README.md"
version = "0.1.3"
authors = ["Taylor C. Richberger <taywee@gmx.com>"]
edition = "2018"
documentation = "https://docs.rs/imagemusic"
homepage = "https://gitlab.com/Taywee/imagemusic"
repository = "https://gitlab.com/Taywee/imagemusic"
keywords = ["music", "audio"]
categories = ["multimedia::audio"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = '1'
toml = '0.5'
brotli = '3'
base64 = '0.12'
bincode = '1'
js-sys = '^0.3'
image = '0.23.6'
minidom = '0.12'

[dependencies.wasm-bindgen]
version = '^0.2'
features = ['serde-serialize']

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dependencies.serde]
version = '1'
features = ['derive']

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
panic = 'abort'

[dev-dependencies]
criterion = '0.3'

[dev-dependencies.rand]
version = '0.7'
features = ['small_rng']


[[bench]]
name = "image_coding"
harness = false

[[bench]]
name = "render_song"
harness = false
